navigation positioning issue on tablet screen size resolved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -721,9 +721,14 @@ h2, h4  {
         }
     }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 768px) {
+    #form-header {
+        font-size: 24px;
+    }
+    
     #form-border {
-        width: 400px;
+        width: 50%;
+        margin-left: 25%;
     }
 }
 
